# osm-gis-export

./: .clang-tidy  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  appveyor.yml  build-appveyor.bat
.github/actions/cmake/: action.yml
.github/actions/install-macos/: action.yml
.github/actions/install-ubuntu/: action.yml
.github/workflows/: ci.yml
src/: CMakeLists.txt  osm_gis_export_overview.cpp  osmium_toogr.cpp  osmium_toogr2.cpp  osmium_toogr2_exp.cpp
